--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -26,7 +26,7 @@ env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = WLR_NO_HARDWARE_CURSORS,1
 env = GBM_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
