--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -22,10 +22,10 @@ exec-once =~/.config/hypr/startup
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
-env = LIBVA_DRIVER_NAME,nvidia
-env = XDG_SESSION_TYPE,wayland
-env = WLR_NO_HARDWARE_CURSORS,1
-env = GBM_BACKEND,nvidia-drm
+# env = LIBVA_DRIVER_NAME,nvidia
+# env = XDG_SESSION_TYPE,wayland
+# env = WLR_NO_HARDWARE_CURSORS,1
+# env = GBM_BACKEND,nvidia-drm
 # env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
@@ -128,9 +128,8 @@ bind = $mainMod, Q, exec, kitty
 bind = $mainMod, C, killactive, 
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, F, fullscreen, 1
-
-
-bind = $mainMod, escape, exec, ~/.config/eww/scripts/launcher menu
+bind = $mainMod, space, exec, ~/.config/eww/scripts/launcher menu
+bind = $mainMod, escape, exec, ~/.config/eww/scripts/popup menu
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -181,6 +180,8 @@ workspace = 8,monitor:DP-1
 workspace = 9,monitor:DP-1
 workspace = 10,monitor:DP-1
 
+
+windowrulev2 = opacity 1.0 override 1.0 override, class:(Google-chrome)
 windowrulev2 = float,title:(kitty_floats)
 windowrulev2 = size 50% 50%,  title:(kitty_floats)
 windowrulev2 = move 25% 25%,  title:(kitty_floats)
