--- a/bottom/bottom.toml
+++ b/bottom/bottom.toml
@@ -10,9 +10,9 @@
 # Whether to hide the average cpu entry.
 #hide_avg_cpu = false
 # Whether to use dot markers rather than braille.
-dot_marker = false
+#dot_marker = false
 # The update rate of the application.
-rate = "250ms"
+#rate = "1s"
 # Whether to put the CPU legend to the left.
 #left_legend = false
 # Whether to set CPU% on a process to be based on the total CPU or just current usage.
@@ -52,7 +52,7 @@ rate = "250ms"
 # Remove space in tables
 #hide_table_gap = false
 # Show the battery widgets
-battery = true
+#battery = false
 # Disable mouse clicks
 #disable_click = false
 # Built-in themes.  Valid values are "default", "default-light", "gruvbox", "gruvbox-light", "nord", "nord-light"
@@ -74,9 +74,9 @@ battery = true
 # Hides advanced options to stop a process on Unix-like systems.
 #disable_advanced_kill = false
 # Shows GPU(s) memory
-enable_gpu_memory = true
+#enable_gpu_memory = false
 # Shows cache and buffer memory
-enable_cache_memory = true
+#enable_cache_memory = false
 # How much data is stored at once in terms of time.
 #retention = "10m"
 
@@ -87,29 +87,6 @@ enable_cache_memory = true
 
 # These are all the components that support custom theming.  Note that colour support
 # will depend on terminal support.
-
-[colors]
-table_header_color = "#f5e0dc"
-all_cpu_color = "#f5e0dc"
-avg_cpu_color = "#eba0ac"
-cpu_core_colors = ["#f38ba8","#fab387","#f9e2af","#a6e3a1","#74c7ec","#cba6f7"]
-ram_color = "#a6e3a1"
-swap_color = "#fab387"
-rx_color = "#a6e3a1"
-tx_color = "#f38ba8"
-widget_title_color = "#f2cdcd"
-border_color = "#585b70"
-highlighted_border_color = "#f5c2e7"
-text_color = "#cdd6f4"
-graph_color = "#a6adc8"
-cursor_color = "#f5c2e7"
-selected_text_color = "#11111b"
-selected_bg_color = "#cba6f7"
-high_battery_color = "#a6e3a1"
-medium_battery_color = "#f9e2af"
-low_battery_color = "#f38ba8"
-gpu_core_colors = ["#74c7ec","#cba6f7","#f38ba8","#fab387","#f9e2af","#a6e3a1"]
-arc_color = "#89dceb"
 
 #[colors] # Uncomment if you want to use custom colors
 # Represents the colour of table headers (processes, CPU, disks, temperature).
