--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -14,7 +14,8 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 monitor=eDP-1,1920x1080@60,0x0,1
 monitor=DP-1,3440x1440@120,1920x0,1
 # Execute your favorite apps at launch
-
+exec-once=exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=waybar
 exec-once =~/.config/hypr/startup
 
 # Source a file (multi-file configs)
@@ -22,11 +23,11 @@ exec-once =~/.config/hypr/startup
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
-# env = LIBVA_DRIVER_NAME,nvidia
-# env = XDG_SESSION_TYPE,wayland
-# env = WLR_NO_HARDWARE_CURSORS,1
-# env = GBM_BACKEND,nvidia-drm
-# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = LIBVA_DRIVER_NAME,nvidia
+env = XDG_SESSION_TYPE,wayland
+env = WLR_NO_HARDWARE_CURSORS,1
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -53,7 +54,6 @@ general {
     border_size = 2
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
-
     layout = dwindle
 }
 
